--- a/.env
+++ b/.env
@@ -2,9 +2,9 @@ DATABASE_URL=
 SESSION_ID=
 REMOVEBG_KEY=
 PREFIX=
-MODE=pubic
-autoRead=
-statusview=true
+MODE=private 
+autoRead=false
+statusview=flase
 antidelete=true
-antilink=true
-autotype=true
+antilink=flase
+autotype=flase
